--- a/src/index.css
+++ b/src/index.css
@@ -30,6 +30,11 @@ main {
     margin-right: 60px;
 }
 
+ul{
+    list-style-type: none;
+    margin-right: 4 0px;
+}
+
 footer {
     background-color:#352d39ff;
 }
